--- a/Pages/PigGame.html
+++ b/Pages/PigGame.html
@@ -4,8 +4,8 @@
 <head>
     <!-- Meta tags -->
     <meta charset="utf-8">
-    <meta name="description" content="Everything about Tolu">
-    <meta name="keywords" content="Tolu, project list, About Tolu ">
+    <meta name="description" content="Pig game">
+    <meta name="keywords" content="Pig game ">
     <meta name="viewport" content="width = device-width, initial-scale = 1.0, Shrink-to-fit = no">
     <meta http-equiv="X-UA-compatible" content="IE = edge, chrome = 1">
     <meta http-equiv="Cache-control" content="no-cache">
@@ -127,6 +127,4 @@
 
     </main>
     <script src="../Scripts/script.js"></script>
-</body>
-
-</html>
+</body></html>
