--- a/Pages/PigGame.html
+++ b/Pages/PigGame.html
@@ -115,7 +115,7 @@
         </center>
         <center>
             <section id="endGame" class="endBackground" style="width: 90%; background-color: white; box-shadow: 5px 2px 2px 5px firebrick">
-                <h1 class="endMessage"> <span id="endText">Saernkjngjnhngjhn,</span> you are the Champion!!! &nbsp; Well done!!! &nbsp; Here's a trophy for you &nbsp;<i class="fas fa-trophy"></i></h1>
+                <h1 class="endMessage"> <span id="endText"></span> you are the Champion!!! &nbsp; Well done!!! &nbsp; Here's a trophy for you &nbsp;<i class="fas fa-trophy"></i></h1>
                 <center>
                     <button class="endBtn" id="playAgain"> Play Again</button>
                 </center>
@@ -127,4 +127,6 @@
 
     </main>
     <script src="../Scripts/script.js"></script>
-</body></html>
+</body>
+
+</html>
