--- a/Pages/PigGame.html
+++ b/Pages/PigGame.html
@@ -27,30 +27,31 @@
     <main style="padding-bottom: 60px;">
         <section id="gameplayPage">
             <h1 class="introMessage"> To begin, enter details below &nbsp; <i class="far fa-hand-point-down"></i></h1>
-            <section>
+            <!--<section>-->
 
-                <p class="para paragraph"> First player's name or username </p>
-                <center>
-                    <input type="text" class="inputText" id="firstPlayer" placeholder="Username">
+            <p class="para paragraph"> First player's name or username </p>
+            <center>
+                <input type="text" class="inputText" id="firstPlayer" placeholder="Username">
 
-                </center>
+            </center>
 
-                <p class="para paragraph1"> Second player's name or username </p>
-                <center>
-                    <input type="text" class="inputText" id="secondPlayer" placeholder="Username">
+            <p class="para paragraph1"> Second player's name or username </p>
+            <center>
+                <input type="text" class="inputText" id="secondPlayer" placeholder="Username">
 
-                </center>
-
-
-                <p class="para paragraph2"> End point number for the game </p>
-                <center>
-                    <input type="text" class="inputText" id="number" placeholder="End Point">
-                </center>
-
-                <p class="input wrongMessage2"> Wrong end-point input! </p>
+            </center>
 
 
-            </section>
+            <p class="para paragraph2"> End point number for the game </p>
+            <center>
+                <input type="text" class="inputText" id="number" placeholder="End Point">
+
+            </center>
+
+            <p class="input wrongMessage2"> Wrong end-point input! </p>
+
+
+            <!--     </section>-->
             <div id="start">
                 <center>
                     <button class=" btn" id="clickStart"> Start Game </button>
